# wizify-rs

./: .gitignore  LICENSE  README.md
test-wiz/: Cargo.toml
test-wiz/src/: main.rs
wizify/: Cargo.toml  README.md
wizify-derive/: Cargo.toml
wizify/src/: lib.rs
wizify_derive/: Cargo.toml  README.md
wizify_derive/src/: error.rs  lib.rs
wizify_derive/src/attributes/: fields.rs  types.rs
wizify_derive/src/parse/: fields.rs  options.rs  types.rs
