[package]
name = "wizify"
description = "A macro library for generating a creation wizard from a struct"
version = "0.0.1"
edition = "2024"
authors = ["Caleb Simmons"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CalSimmon/wizify-rs"
keywords = ["wizard", "creation", "create", "dialogue"]

[dependencies]
wizify_derive = "0.0.1"
dialoguer = "0.11.0"
