[package]
name = "wizify_derive"
description = "A macro library for generating a creation wizard from a struct"
version = "0.0.1"
edition = "2024"
authors = ["Caleb Simmons"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/CalSimmon/wizify-rs"
keywords = ["wizard", "creation", "create", "dialogue"]

[lib]
name = "wizify_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "*"
syn = { version = "*", features = ["extra-traits"]}
quote = "*"
proc-macro-error2 = "*"
