[package]
name = "wizify_derive"
description = "A macro library for generating a creation wizard from a struct"
version = "0.0.1"
edition = "2024"
authors = ["Caleb Simmons"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CalSimmon/wizify-rs"
keywords = ["wizard", "creation", "create", "dialogue"]

[lib]
name = "wizify_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
syn = { version = "2.0.101", features = ["extra-traits"]}
quote = "1.0.40"
proc-macro-error2 = "2.0.1"
